Add new controllers, views, and updated project files

--- a/CoreEntityFramework/Views/Shared/_Layout.cshtml
+++ b/CoreEntityFramework/Views/Shared/_Layout.cshtml
@@ -23,11 +23,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Swagger" asp-action="Index">API</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AccountPage" asp-action="List">Account</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ApplicationPage" asp-action="List">Application</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PetPage" asp-action="List">Pet</a>
+                        </li>
+                       
+
                     </ul>
                 </div>
             </div>
