--- a/CoreEntityFramework/Views/Shared/_Layout.cshtml
+++ b/CoreEntityFramework/Views/Shared/_Layout.cshtml
@@ -34,8 +34,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="PetPage" asp-action="List">Pet</a>
                         </li>
-                       
-
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FoodTruckPage" asp-action="List">FoodTruck</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MenuItemPage" asp-action="List">MenuItem</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LocationPage" asp-action="List">Location</a>
+                        </li>
                     </ul>
                 </div>
             </div>
