--- a/CoreEntityFramework/Views/AccountPage/Details.cshtml
+++ b/CoreEntityFramework/Views/AccountPage/Details.cshtml
@@ -17,6 +17,8 @@
                 <p class="card-text"><strong>Account Name:</strong> @Model.Account.AccountName</p>
                 <p class="card-text"><strong>Email:</strong> @Model.Account.AccountEmail</p>
                 <p class="card-text"><strong>Role:</strong> @Model.Account.AccountRole</p>
+                <p class="card-text"><strong>City:</strong> @Model.Account.AccountCity</p>
+                <p class="card-text"><strong>State:</strong> @Model.Account.AccountState</p>
             </div>
             <div class="card-footer text-muted">
                 <a href="@Url.Action("Edit", "AccountPage", new { id = Model.Account.AccountId })" class="btn btn-warning">Edit Account</a>
