--- a/CoreEntityFramework/Views/LocationPage/Details.cshtml
+++ b/CoreEntityFramework/Views/LocationPage/Details.cshtml
@@ -16,7 +16,7 @@
                 <h5 class="card-title">Location ID: @Model.Location.LocationId</h5>
                 <p class="card-text"><strong>Address:</strong> @Model.Location.Address</p>
                 <p class="card-text"><strong>City:</strong> @Model.Location.City</p>
-                <p class="card-text"><strong>Postal Code:</strong> @Model.Location.State</p>
+                <p class="card-text"><strong>State:</strong> @Model.Location.State</p>
             </div>
             <div class="card-footer text-muted">
                 <a href="@Url.Action("Edit", "LocationPage", new { id = Model.Location.LocationId })" class="btn btn-warning">Edit Location</a>
