--- a/CoreEntityFramework/Views/FoodTruckPage/New.cshtml
+++ b/CoreEntityFramework/Views/FoodTruckPage/New.cshtml
@@ -6,54 +6,58 @@
 
 <h1>Create New Food Truck</h1>
 
-<h4>Food Truck</h4>
+<h4>Food Truck Information</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Add" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+            <!-- Name -->
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
+            <!-- Description -->
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
+            <!-- Contact -->
             <div class="form-group">
                 <label asp-for="Contact" class="control-label"></label>
                 <input asp-for="Contact" class="form-control" />
                 <span asp-validation-for="Contact" class="text-danger"></span>
             </div>
 
+            <!-- Location -->
             <div class="form-group">
                 <label asp-for="LocationId" class="control-label"></label>
                 <select asp-for="LocationId" class="form-control">
-                    <!-- Add options dynamically if needed -->
                     <option value="">Select a Location</option>
-                    <!-- Example: Dynamically populate with available locations -->
+                    @foreach (var location in ViewBag.Locations)
+                    {
+                        <option value="@location.Value">@location.Text</option>
+                    }
                 </select>
                 <span asp-validation-for="LocationId" class="text-danger"></span>
             </div>
-
+            <!-- Submit Button -->
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create Food Truck" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="List">Back to Food Trucks</a>
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    <partial name="_ValidationScriptsPartial" />
 }
