--- a/CoreEntityFramework/Views/MenuItemPage/New.cshtml
+++ b/CoreEntityFramework/Views/MenuItemPage/New.cshtml
@@ -1,12 +1,12 @@
-﻿@model PetAdoption.Models.AccountDto
+﻿@model PetAdoption.Models.MenuItemDto
 
 @{
-    ViewData["Title"] = "Create New Account";
+    ViewData["Title"] = "Create New MenuItem";
 }
 
-<h1>Create New Account</h1>
+<h1>Create New MenuItem</h1>
 
-<h4>Account</h4>
+<h4>MenuItem</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,27 +14,21 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="AccountName" class="control-label"></label>
-                <input asp-for="AccountName" class="form-control" />
-                <span asp-validation-for="AccountName" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="AccountEmail" class="control-label"></label>
-                <input asp-for="AccountEmail" class="form-control" />
-                <span asp-validation-for="AccountEmail" class="text-danger"></span>
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" type="number" step="0.01" />
+                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="AccountRole" class="control-label"></label>
-                <input asp-for="AccountRole" class="form-control" />
-                <span asp-validation-for="AccountRole" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="AccountPassword" class="control-label"></label>
-                <input asp-for="AccountPassword" class="form-control" type="password" />
-                <span asp-validation-for="AccountPassword" class="text-danger"></span>
+                <label asp-for="FoodTruckId" class="control-label"></label>
+                <input asp-for="FoodTruckId" class="form-control" type="number" />
+                <span asp-validation-for="FoodTruckId" class="text-danger"></span>
             </div>
 
             <div class="form-group">
