--- a/CoreEntityFramework/Views/FoodTruckPage/ConfirmDelete.cshtml
+++ b/CoreEntityFramework/Views/FoodTruckPage/ConfirmDelete.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetAdoption.Models.AccountDto
+﻿@model PetAdoption.Models.FoodTruckDto
 
 @{
     ViewData["Title"] = "Confirm Delete";
@@ -6,39 +6,45 @@
 
 <h1>Confirm Delete</h1>
 
-<h3>Are you sure you want to delete this account?</h3>
+<h3>Are you sure you want to delete this food truck?</h3>
 <div>
-    <h4>Account Details</h4>
+    <h4>Food Truck Details</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AccountName)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountEmail)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AccountEmail)
+            @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountRole)
+            @Html.DisplayNameFor(model => model.Contact)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AccountRole)
+            @Html.DisplayFor(model => model.Contact)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountId)
+            @Html.DisplayNameFor(model => model.LocationAddress)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AccountId)
+            @Html.DisplayFor(model => model.LocationAddress)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FoodTruckId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FoodTruckId)
         </dd>
     </dl>
 
-    <form asp-action="Delete" asp-route-id="@Model.AccountId">
-        <input type="hidden" asp-for="AccountId" />
+    <form asp-action="Delete" asp-route-id="@Model.FoodTruckId">
+        <input type="hidden" asp-for="FoodTruckId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
