--- a/CoreEntityFramework/Views/FoodTruckPage/Edit.cshtml
+++ b/CoreEntityFramework/Views/FoodTruckPage/Edit.cshtml
@@ -1,46 +1,44 @@
-﻿@model PetAdoption.Models.AccountDto
+﻿@model PetAdoption.Models.FoodTruckDto
 
 @{
-    ViewData["Title"] = "Edit Account";
+    ViewData["Title"] = "Edit FoodTruck";
 }
 
-<h1>Edit Account</h1>
+<h1>Edit FoodTruck</h1>
 
-<h4>Account</h4>
+<h4>FoodTruck</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Update" asp-route-id="@Model.AccountId">
+    <div class="col-md-6">
+        <form asp-action="Update" asp-route-id="@Model.FoodTruckId">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="AccountId" />
+            <input type="hidden" asp-for="FoodTruckId" />
 
             <div class="form-group">
-                <label asp-for="AccountName" class="control-label"></label>
-                <input asp-for="AccountName" class="form-control" />
-                <span asp-validation-for="AccountName" class="text-danger"></span>
+                <label asp-for="Name" class="control-label">Name</label>
+                <input asp-for="Name" class="form-control"  />
             </div>
 
             <div class="form-group">
-                <label asp-for="AccountEmail" class="control-label"></label>
-                <input asp-for="AccountEmail" class="form-control" />
-                <span asp-validation-for="AccountEmail" class="text-danger"></span>
+                <label asp-for="Description" class="control-label">Description</label>
+                <input asp-for="Description" class="form-control" />
             </div>
 
             <div class="form-group">
-                <label asp-for="AccountRole" class="control-label"></label>
-                <input asp-for="AccountRole" class="form-control" />
-                <span asp-validation-for="AccountRole" class="text-danger"></span>
+                <label asp-for="Contact" class="control-label">Contact</label>
+                <input asp-for="Contact" class="form-control" />
             </div>
 
+
             <div class="form-group">
-                <label asp-for="AccountPassword" class="control-label"></label>
-                <input asp-for="AccountPassword" class="form-control" type="password" />
-                <span asp-validation-for="AccountPassword" class="text-danger"></span>
+                <label asp-for="LocationId" class="control-label">LocationId</label>
+                <input asp-for="LocationId" class="form-control" />
             </div>
 
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
+
         </form>
     </div>
 </div>
