--- a/CoreEntityFramework/Views/LocationPage/Edit.cshtml
+++ b/CoreEntityFramework/Views/LocationPage/Edit.cshtml
@@ -1,41 +1,35 @@
-﻿@model PetAdoption.Models.AccountDto
+﻿@model PetAdoption.Models.LocationDto
 
 @{
     ViewData["Title"] = "Edit Account";
 }
 
-<h1>Edit Account</h1>
+<h1>Edit Location</h1>
 
-<h4>Account</h4>
+<h4>Location</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Update" asp-route-id="@Model.AccountId">
+        <form asp-action="Update" asp-route-id="@Model.LocationId">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="AccountId" />
+            <input type="hidden" asp-for="LocationId" />
 
             <div class="form-group">
-                <label asp-for="AccountName" class="control-label"></label>
-                <input asp-for="AccountName" class="form-control" />
-                <span asp-validation-for="AccountName" class="text-danger"></span>
+                <label asp-for="Address" class="control-label"></label>
+                <input asp-for="Address" class="form-control" />
+                <span asp-validation-for="Address" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="AccountEmail" class="control-label"></label>
-                <input asp-for="AccountEmail" class="form-control" />
-                <span asp-validation-for="AccountEmail" class="text-danger"></span>
+                <label asp-for="City" class="control-label"></label>
+                <input asp-for="City" class="form-control" />
+                <span asp-validation-for="City" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="AccountRole" class="control-label"></label>
-                <input asp-for="AccountRole" class="form-control" />
-                <span asp-validation-for="AccountRole" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="AccountPassword" class="control-label"></label>
-                <input asp-for="AccountPassword" class="form-control" type="password" />
-                <span asp-validation-for="AccountPassword" class="text-danger"></span>
+                <label asp-for="State" class="control-label"></label>
+                <input asp-for="State" class="form-control" />
+                <span asp-validation-for="State" class="text-danger"></span>
             </div>
 
             <div class="form-group">
