--- a/CoreEntityFramework/Views/Shared/_Layout.cshtml
+++ b/CoreEntityFramework/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="LocationPage" asp-action="List">Location</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
